add shopping cart functionnality for auth and unauth users